fixing the spacing between items

--- a/src/components/Grid.css
+++ b/src/components/Grid.css
@@ -1,32 +1,60 @@
-.flex-container {
+.main-container {
   display: flex;
-  background: lightgrey;
   flex-direction: row;
-  height: 370px;
+  height: 470px;
   margin-top: 5em;
   width: 100%;
 }
 
-.flex-left {
+.container-left {
   border: 1px solid black;
-  height: 100%;
-  width: 45%;
+  flex-basis: 45%;
+  flex-wrap: wrap;
+  margin-right: 10px;
   background: linear-gradient(10deg, #b3b3b3, #f2f2f2 55%);
 }
 
 .container-right {
   display: flex;
-  width: 50%;
+  flex-direction: row;
+  flex-basis: 55%;
   height: auto;
+  flex-wrap: wrap;
+  background-color: pink;
 }
 
-.item-1,
-.item-2,
-.item-3,
-.item-4 {
-  height: 50%;
-  width: 50%;
+.item {
+  flex-basis: calc(50% - 20px);
+  margin: 10px;
+  text-align: center;
   background-color: black;
   color: white;
-  margin: 5px;
+}
+
+.item-1 {
+}
+
+@media (max-width: 815px) {
+  .item {
+    flex-basis: 100%;
+  }
+
+  .main-container {
+    height: 50vh;
+  }
+}
+
+@media (max-width: 400px) {
+  .item {
+    flex-basis: 100%;
+  }
+
+  .main-container {
+    height: 50vh;
+    flex-direction: column;
+  }
+
+  .container-left {
+    width: 100%;
+  }
 }
